--- a/django/contrib/admin/static/admin/css/widgets.css
+++ b/django/contrib/admin/static/admin/css/widgets.css
@@ -589,6 +589,10 @@ ul.timelist, .timelist li {
     margin-bottom: 5px;
 }
 
+.related-widget-wrapper:has(select:not([multiple])) {
+    align-items: center;
+}
+
 .related-widget-wrapper-link {
     opacity: .6;
     filter: grayscale(1);
